PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Add readline-based autocompletion support for text-based menu selection lists
pts-core: Add readline-based autocompletion support for the result file save name for trying to match existing result file identifiers
pts-core: Various Alpine Linux external dependency updates
phoromatic: From rootadmin allow the rootadmin to override/reset a user account password
phodevi: Windows battery reporting discharge rate support
phodevi: Improved multi CPU socket reporting on Windows
phodevi: Various hardware/software detection improvements when running within Docker/containers

Phoronix Test Suite 8.0.1-Aremark
26 June 2018

pts-core: Add "wine" external dependency support
pts-core: Fix skip-test behavior
pts-core: Web browser handling improvements on Windows, other Windows updates
phoromatic: Various minor fixes and enhancements
phodevi: Add USE_WINE environment variable check, point it towards the wine binary you wish to test

Phoronix Test Suite 8.0.0-Aremark
5 June 2018

pts-core: Various macOS support tweaks/improvements
pts-core: Add external dependency support for Brew macOS package manager
pts-core: Avoid duplicate test identifiers on graphs
phodevi: Improved X.Org Server version detection

Phoronix Test Suite 8.0.0 Milestone 5
30 May 2018

pts-core: Termux external dependency support
pts-core: Other minor tweaks and changes
phoromatic: Better handling when the Phoromatic Server is run without an Internet connection or Internet disabled
phoromatic: A wide variety of other Phoromatic Server optimizations and improvements
phodevi: Add spec_store_bypass / Spectre Variant 4 reporting

Phoronix Test Suite 8.0.0 Milestone 4
16 May 2018

phoromatic: Add a "email all users" option to the rootadmin page
phoromatic: Improve search functionality on results page, allow boolean expressions, date ranges, many other search features
phoromatic: Various search improvements to `phoronix-test-suite search`