@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2008 - 2014, Phoronix Media
-	Copyright (C) 2008 - 2014, Michael Larabel
+	Copyright (C) 2008 - 2018, Phoronix Media
+	Copyright (C) 2008 - 2018, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -34,18 +34,18 @@ class diagnostics implements pts_option_interface
 				continue;
 			}
 
-			echo $constant . ' = ' . $constant_value . PHP_EOL;
+			echo pts_client::cli_just_bold($constant) . ' = ' . $constant_value . PHP_EOL;
 		}
 
 		echo PHP_EOL . 'Variables That Can Be Used As Result Identifiers / File Names:' . PHP_EOL;
 		foreach(pts_client::user_run_save_variables() as $var => $var_value)
 		{
-			echo $var . ' = ' . $var_value . PHP_EOL;
+			echo pts_client::cli_just_bold($var) . ' = ' . $var_value . PHP_EOL;
 		}
 		echo PHP_EOL . 'Environmental Variables (accessible via test scripts):' . PHP_EOL;
 		foreach(pts_client::environmental_variables() as $var => $var_value)
 		{
-			echo $var . ' = ' . $var_value . PHP_EOL;
+			echo pts_client::cli_just_bold($var) . ' = ' . $var_value . PHP_EOL;
 		}
 		echo PHP_EOL;
 	}
