@@ -3,8 +3,8 @@
 /*
 	Phoronix Test Suite
 	URLs: http://www.phoronix.com, http://www.phoronix-test-suite.com/
-	Copyright (C) 2009 - 2016, Phoronix Media
-	Copyright (C) 2009 - 2016, Michael Larabel
+	Copyright (C) 2009 - 2018, Phoronix Media
+	Copyright (C) 2009 - 2018, Michael Larabel
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
@@ -24,20 +24,8 @@ class dump_possible_options implements pts_option_interface
 {
 	public static function run($r)
 	{
-		$options = array();
-
-		foreach(pts_file_io::glob(PTS_COMMAND_PATH . '*.php') as $option_php)
-		{
-			$name = str_replace('_', '-', basename($option_php, '.php'));
-
-			if(!in_array(pts_strings::first_in_string($name, '-'), array('dump', 'debug', 'task')))
-			{
-				$options[] = $name;
-			}
-		}
-
 		$is_true = isset($r[0]) && $r[0] == 'TRUE';
-		echo implode($is_true ? ' ' : PHP_EOL, $options) . ($is_true ? null : PHP_EOL);
+		echo implode($is_true ? ' ' : PHP_EOL, pts_client::possible_sub_commands()) . ($is_true ? null : PHP_EOL);
 	}
 }
 
