@@ -5,6 +5,7 @@ Phoronix Test Suite (Git)
 pts-core: Add readline-based autocompletion support for text-based menu selection lists
 pts-core: Add readline-based autocompletion support for the result file save name for trying to match existing result file identifiers
 pts-core: Various Alpine Linux external dependency updates
+pts-core: Various improvements to the Shell sub-command functionality, including auto-completion support
 phoromatic: From rootadmin allow the rootadmin to override/reset a user account password
 phodevi: Windows battery reporting discharge rate support
 phodevi: Improved multi CPU socket reporting on Windows
